# U-MambaMTL-XAI

./: .gitignore  fix_maps_dir.py  fix_zone_metrics.py  generate_xai_metrics-parallel.py  job_swin.slurm  job_umamba.slurm  modify_fold.py  pyproject.toml  setup.py  xai_statistics.py
experiments/picai/swin_unetr/: config.yaml  generate_xai_metrics-parallel.py  job_array.slurm
experiments/picai/umamba_mtl/: config.yaml  config_old.yaml  evaluate_ensemble.ipynb  generate_xai_metrics-parallel.py  generate_xai_metrics.py  job.slurm  job_array.slurm  trainer.py  xai.py  xai_statistics.py  xai_testing_captum copy.ipynb  xai_testing_captum.ipynb
json_datalists/picai/: all_samples.json  fold_0.json  fold_0_abs_path.json  fold_1.json  fold_2.json  fold_2_abs.json  fold_3.json  fold_4.json  fold_dummy.json
shared_modules/: data_module.py  module_selector.py  plotting.py  xai.py  xai_metrics.py
umamba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: download_weights.py
